<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appointmentDetailRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="108dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/space_24"
            android:paddingTop="@dimen/space_24"
            android:paddingRight="@dimen/space_24"
            android:paddingBottom="@dimen/space_24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/touch_target"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBackAppointmentDetail"
                    android:layout_width="@dimen/touch_target"
                    android:layout_height="@dimen/touch_target"
                    android:background="@drawable/user_profile_icon_bg"
                    android:contentDescription="@string/cd_back"
                    android:padding="@dimen/space_12"
                    android:src="@drawable/ic_user_back"
                    app:tint="@color/app_text_primary" />

                <TextView
                    style="@style/TextRoleH2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_weight="1"
                    android:text="@string/appointment_detail_title" />
            </LinearLayout>

            <TextView
                style="@style/TextRoleParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:text="@string/appointment_detail_subtitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/user_surface_card_bg"
                android:orientation="vertical"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/tvAppointmentDetailStatus"
                    style="@style/TextRoleH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/user_badge_bg"
                    android:paddingLeft="@dimen/space_12"
                    android:paddingTop="@dimen/space_8"
                    android:paddingRight="@dimen/space_12"
                    android:paddingBottom="@dimen/space_8"
                    android:text="@string/activity_card_1_status" />

                <TextView
                    android:id="@+id/tvAppointmentDetailTitle"
                    style="@style/TextRoleH2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:text="@string/activity_card_1_title" />

                <TextView
                    style="@style/TextRoleH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20"
                    android:text="@string/appointment_detail_date_label"
                    android:textColor="@color/app_text_muted" />

                <TextView
                    android:id="@+id/tvAppointmentDetailDate"
                    style="@style/TextRoleListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:text="@string/activity_card_1_datetime" />

                <TextView
                    style="@style/TextRoleH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:text="@string/appointment_detail_advisor_label"
                    android:textColor="@color/app_text_muted" />

                <TextView
                    android:id="@+id/tvAppointmentDetailAdvisor"
                    style="@style/TextRoleListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:text="@string/activity_card_1_advisor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:background="@drawable/user_surface_card_bg"
                android:orientation="vertical"
                android:padding="@dimen/space_16">

                <TextView
                    style="@style/TextRoleH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_detail_location_label"
                    android:textColor="@color/app_text_muted" />

                <TextView
                    android:id="@+id/tvAppointmentDetailLocation"
                    style="@style/TextRoleParagraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:text="@string/activity_appointment_location_1" />

                <TextView
                    style="@style/TextRoleH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:text="@string/appointment_detail_note_label"
                    android:textColor="@color/app_text_muted" />

                <TextView
                    android:id="@+id/tvAppointmentDetailNote"
                    style="@style/TextRoleParagraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:text="@string/activity_appointment_note_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:background="@drawable/user_surface_card_bg"
                android:orientation="vertical"
                android:padding="@dimen/space_16">

                <TextView
                    android:id="@+id/tvAppointmentNextTitle"
                    style="@style/TextRoleH2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_detail_next_title" />

                <TextView
                    android:id="@+id/tvAppointmentNextDescription"
                    style="@style/TextRoleParagraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:text="@string/appointment_detail_next_description_confirmed" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAppointmentPrimaryAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/control_height_md"
                android:layout_marginTop="@dimen/space_24"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:text="@string/appointment_detail_primary_confirmed"
                android:textColor="@color/white"
                app:backgroundTint="@color/app_brand_navy_2"
                app:cornerRadius="@dimen/radius_sm"
                app:rippleColor="#22000000"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAppointmentSecondaryAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/control_height_md"
                android:layout_marginTop="@dimen/space_12"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:text="@string/appointment_detail_secondary_confirmed"
                android:textColor="@color/app_text_primary"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="@dimen/radius_sm"
                app:rippleColor="#22000000"
                app:strokeColor="@color/app_button_outline"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/userBottomNavInclude"
        layout="@layout/view_usuario_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</FrameLayout>
